--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amplify": "^0.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
