--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "amplify": "^0.0.11",
+    "aws-amplify": "^6.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
